--- a/pom.xml
+++ b/pom.xml
@@ -111,13 +111,13 @@
     <dependency>
       <groupId>org.jboss.ws</groupId>
       <artifactId>jbossws-common</artifactId>
-      <version>2.3.1.Final-redhat-1</version>
+      <version>2.3.1.Final</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.jboss.ws</groupId>
       <artifactId>jbossws-api</artifactId>
-      <version>1.0.2.Final-redhat-1</version>
+      <version>1.0.2.Final</version>
       <scope>provided</scope>
     </dependency>
   
